tools/tests/errors/chr_out_of_range.experr
chr argument out of Unicode range
